# TBD license/url/description

[project]
name = "judy"
authors = [
	{ name = "Arni Mar Jonsson", email = "arnimarj@gmail.com" },
]
readme = "README.md"
version = "1.0.21"
requires-python = ">=3.10"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"Operating System :: POSIX",
	"Programming Language :: C",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Topic :: Database",
	"Topic :: Software Development :: Libraries",
]
dependencies = [
	"numpy>=2.3.2; python_version >= '3.14'",
	"numpy>=2.1.3; python_version <  '3.14'",
]

[build-system]
requires = [
    "scikit-build-core>=0.11.6",
    "nanobind>=2.8.0"
]

build-backend = "scikit_build_core.build"

[tool.scikit-build.wheel.packages]
"judy" = "./src/judy"

[tool.scikit-build]
strict-config = true
sdist.cmake = true
sdist.include = [
  "pyproject.toml",
  "src",
]
wheel.exclude = ["cpp"]

[tool.cibuildwheel]
archs = "auto64"
test-requires = "pytest"

test-command = [
	"pytest {package}/tests",
]

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
