# TBD license/url/description

[project]
name = "judy"
authors = [
	{ name = "Arni Mar Jonsson", email = "arnimarj@gmail.com" },
]
readme = "README.md"
version = "2.0.2"
requires-python = ">=3.10"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"Operating System :: POSIX",
	"Programming Language :: C",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Programming Language :: Python :: Free Threading :: 2 - Beta",
	"Topic :: Database",
	"Topic :: Software Development :: Libraries",
]
dependencies = [
	"numpy>=2.3.2; python_version >= '3.14'",
	"numpy>=2.1.3; python_version <  '3.14'",
]

[build-system]
requires = [
    "scikit-build-core>=0.11.6",
    "nanobind>=2.9.2"
]

build-backend = "scikit_build_core.build"

[tool.scikit-build]
strict-config = true
sdist.cmake = true
sdist.include = [
  "pyproject.toml",
  "src",
]
wheel.exclude = ["cpp"]

[tool.scikit-build.wheel.packages]
"judy" = "./src/judy"

[tool.cibuildwheel]
archs = "auto64"
test-requires = "pytest"

test-command = [
	"pytest {package}/tests",
]

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[tool.black]
line-length = 120
skip-string-normalization = 1

[tool.isort]
case_sensitive = true
combine_as_imports = true
force_alphabetical_sort_within_sections = true
honor_noqa = true
known_first_party = ["judy"]
length_sort = false
line_length = 120
lines_after_imports = 2
lines_between_types = false
profile = "black"
